# scgen

./: .flake8  .gitignore  .readthedocs.yml  .travis.yml  README.md  __init__..py  codecov.yml  mkdocs.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
.github/workflows/: test.yml
.ipynb_checkpoints/: scgen-checkpoint.ipynb
code/: Vec_Arith.py  Vec_Arith_PCA.py  bbknn.ipynb  cca.ipynb  cross_study.ipynb  cvae.py  data_reader.py  mnn.ipynb  mouse_atlas.py  network.py  pancrease.py  scanorama.ipynb  scgen_hpoly.ipynb  scgen_kang.ipynb  scgen_kang_multiple.ipynb  scgen_sal_TA.ipynb  scgen_salmonella.ipynb  st_gan.py
code/.ipynb_checkpoints/: cross_species-checkpoint.ipynb  pancreas-2-mnnCorrect (2)-checkpoint.ipynb  scgen_hpoly-checkpoint.ipynb
data/: download_dataset.sh  valid.h5ad
docs/: README.md  conf.py  generate_docs.py  index.md  index.rst  installation.md  installation.rst  references.rst  requirements.txt  structure.py
docs/api/: index.rst
docs/release_notes/: index.rst  v0.1.0.rst  v0.1.1.rst  v2.0.rst
docs/sources/: index.md  installation.md  plotting.md
docs/sources/api/: plotting.md  read_load.md
docs/sources/api/models/: utils.md  vae.md
docs/templates/: index.md  installation.md
docs/tutorials/: index.rst  scgen_batch_removal.ipynb  scgen_perturbation_prediction.ipynb
notebooks/: scgen_batch_removal.ipynb  scgen_perturbation_prediction.ipynb
scgen/: __init__.py  _base_components.py  _scgen.py  _scgenvae.py  _utils.py  data_generator.py  hyperoptim.py  plotting.py  read_load.py
scgen/interpret/: _deeptaylor.py
scgen/models/: __init__.py  _cvae.py  _vae.py  _vae_keras.py  mmd_ccvae.py  mmd_cvae.py  util.py
tests/: test_cvae.py  test_cvae_temp.py  test_data_loader.py  test_mmd_ccvae.py  test_mmd_cvae.py  test_plotting.py  test_scgen.py  test_score.py  test_util.py  test_vae.py  test_vae_keras.py
